# price_history

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  conftest.py  pyproject.toml
backend/alerts/: models.py  serializers.py  tasks.py  urls.py  views.py
backend/alerts/migrations/: 0001_initial.py
backend/alerts/tests/: conftest.py  test_endpoints.py  test_triggers.py
backend/analytics/: models.py  repositories.py  services.py  tasks.py
backend/analytics/migrations/: 0001_initial.py
backend/analytics/tests/: test_anomaly.py  test_repository.py  test_tasks.py  test_volatility.py
backend/config/: celery.py  routers.py  settings.py  urls.py
backend/groups/: models.py  serializers.py  urls.py  views.py
backend/groups/migrations/: 0001_initial.py
backend/groups/tests/: conftest.py  test_actions.py  test_groups_api.py
backend/products/: models.py  serializers.py  urls.py  views.py
backend/products/migrations/: 0001_initial.py  0002_seed_platformy.py
backend/products/tests/: test_delete.py  test_endpoint.py
backend/scrapers/: allegro.py  amazon.py  base.py  detection.py  tasks.py
backend/scrapers/tests/: test_allegro.py  test_amazon.py  test_beat.py  test_detection.py  test_tasks.py
backend/sellers/: models.py
backend/sellers/migrations/: 0001_initial.py
backend/tests/: test_smoke.py
backend/users/: models.py  serializers.py  views.py
backend/users/migrations/: 0001_initial.py
backend/users/tests/: test_auth.py
docs/analityka/: wskaznik-zmiennosci.md  wykrywanie-anomalii.md
docs/api/: endpointy.md
docs/architektura/: diagram-komponentow.md  przeglad-systemu.md
docs/baza-danych/: schemat-postgresql.md  schemat-timescaledb.md
docs/scrapery/: allegro-api.md  amazon-scraper.md
docs/zadania-w-tle/: architektura-celery.md
frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/auth/: AuthContext.tsx
frontend/src/components/: Layout.tsx  RequireAuth.tsx
frontend/src/pages/: AlertsPage.tsx  DashboardPage.tsx  GroupDetailPage.tsx  LoginPage.tsx  RegisterPage.tsx
