[project]
name = "price-history-scanner"
version = "0.1.0"
description = "Multi-platform e-commerce price tracker (PZSI 2025)"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1,<5.2",
    "djangorestframework>=3.15",
    "django-filter>=24.3",
    "djangorestframework-simplejwt>=5.3",
    "drf-spectacular>=0.27",
    "celery[redis]>=5.4",
    "redis>=5.0",
    "psycopg[binary]>=3.2",
    "pandas>=2.2",
    "numpy>=2.0",
    "requests>=2.32",
    "python-decouple>=3.8",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "django-stubs[compatible-mypy]>=5.1",
    "djangorestframework-stubs[compatible-mypy]>=3.15",
    "ipython>=8.30",
    "rich>=13.9",
    "django-extensions>=3.2",
    "pre-commit>=4.0",
]
test = [
    "pytest>=8.3",
    "pytest-django>=4.9",
    "pytest-cov>=6.0",
    "pytest-asyncio>=0.24",
    "factory-boy>=3.3",
    "responses>=0.25",
    "freezegun>=1.5",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["migrations", ".venv", "staticfiles"]

[tool.ruff.lint]
select = [
    "E", "F", "W",  # pycodestyle, pyflakes
    "I",            # isort
    "N",            # pep8-naming
    "UP",           # pyupgrade
    "B",            # flake8-bugbear
    "C4",           # flake8-comprehensions
    "DJ",           # flake8-django
    "SIM",          # flake8-simplify
    "RET",          # flake8-return
    "PT",           # flake8-pytest-style
    "ARG",          # flake8-unused-arguments
]
ignore = [
    "E501",  # line length handled by formatter
    "B008",  # function call in default argument (DRF/Django pattern)
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["S101", "ARG"]
"**/migrations/**" = ["N806", "E501"]
"conftest.py" = ["ARG"]
"config/routers.py" = ["ARG002"]  # Django router protocol signatures

[tool.ruff.lint.isort]
known-first-party = [
    "config",
    "users",
    "groups",
    "products",
    "sellers",
    "alerts",
    "analytics",
    "scrapers",
]

[tool.mypy]
python_version = "3.12"
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = false
check_untyped_defs = true
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
exclude = ["migrations/", ".venv/"]

[tool.django-stubs]
django_settings_module = "config.settings"

[[tool.mypy.overrides]]
module = ["*.migrations.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "celery.*",
    "kombu.*",
    "decouple.*",
    "factory.*",
    "responses.*",
    "django_filters.*",
    "pandas.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "tests.py"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-ra",
]
markers = [
    "integration: integration tests that hit real external services",
    "slow: slow tests (>1s)",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["."]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "manage.py",
    "config/wsgi.py",
    "config/asgi.py",
    ".venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
